[gd_scene load_steps=11 format=2]

[ext_resource path="res://assets/art/ui/pos_tab_panel.png" type="Texture" id=1]
[ext_resource path="res://assets/art/ui/cancel_pressed.png" type="Texture" id=2]
[ext_resource path="res://assets/art/ui/cancel.png" type="Texture" id=3]
[ext_resource path="res://src/UI/PosUI.gd" type="Script" id=4]
[ext_resource path="res://assets/art/ui/pos_state.png" type="Texture" id=5]
[ext_resource path="res://assets/art/ui/pos_state_pressed.png" type="Texture" id=6]
[ext_resource path="res://assets/art/ui/pos_stock_pressed.png" type="Texture" id=7]
[ext_resource path="res://assets/art/ui/pos_stock.png" type="Texture" id=8]
[ext_resource path="res://assets/art/ui/pos_sales.png" type="Texture" id=9]
[ext_resource path="res://assets/art/ui/pos_sales_pressed.png" type="Texture" id=10]

[node name="PosUI" type="Control"]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PosContainer" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PosBack" type="TextureRect" parent="PosContainer"]
margin_left = 271.23
margin_top = 139.94
margin_right = 1231.23
margin_bottom = 679.94
rect_scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="State" type="Control" parent="PosContainer/PosBack"]
margin_right = 40.0
margin_bottom = 40.0

[node name="Sales" type="Control" parent="PosContainer/PosBack"]
margin_right = 40.0
margin_bottom = 40.0

[node name="Stock" type="Control" parent="PosContainer/PosBack"]
margin_right = 40.0
margin_bottom = 40.0

[node name="Tabs" type="Control" parent="PosContainer"]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StateBtn" type="TextureButton" parent="PosContainer/Tabs"]
margin_left = 545.868
margin_top = 145.677
margin_right = 785.868
margin_bottom = 225.677
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 5 )
texture_hover = ExtResource( 5 )
texture_disabled = ExtResource( 5 )
texture_focused = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SalesBtn" type="TextureButton" parent="PosContainer/Tabs"]
margin_left = 789.897
margin_top = 146.274
margin_right = 1029.9
margin_bottom = 226.274
texture_normal = ExtResource( 10 )
texture_pressed = ExtResource( 9 )
texture_hover = ExtResource( 9 )
texture_disabled = ExtResource( 9 )
texture_focused = ExtResource( 9 )

[node name="StockBtn" type="TextureButton" parent="PosContainer/Tabs"]
margin_left = 1035.73
margin_top = 146.206
margin_right = 1275.73
margin_bottom = 226.206
texture_normal = ExtResource( 7 )
texture_pressed = ExtResource( 8 )
texture_hover = ExtResource( 8 )
texture_disabled = ExtResource( 8 )
texture_focused = ExtResource( 8 )

[node name="TextureButton" type="TextureButton" parent="."]
margin_left = 1476.61
margin_top = 262.36
margin_right = 1540.61
margin_bottom = 326.36
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 2 )
texture_hover = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="TextureButton" to="." method="_on_TextureButton_pressed"]
